--- a/Examples/data_wrangling.qmd
+++ b/Examples/data_wrangling.qmd
@@ -4,7 +4,11 @@ format: html
 editor: visual
 ---
 
-## 2021 nyc stop and frisk data
+### 2021 NYC Stop and Frisk 
+
+The New York City Police Department (NYPD) is able to employ the stop and frisk technique when an officer has good reason to believe that someone is armed and dangerous,. This strategy includes pulling someone over, asking them questions, and patting down their clothes to check for weapons or other indications of criminal activity. The citizen may also be subjected to physical force by the police.
+
+The following table shows racial demographics in relation to the stop and frisk activity conducted by the NYPD in 2021. It outlines the number of stops by race, the percentage of people stopped from the total number of stops for each racial group, and the percentage of people arrested from the total number of arrests for each racial group.
 
 ```{r}
 #| include: false
